--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <h1>lpu23x root page</h1>
 
 <p>information</p>
-
+<a href="https://github.com/elpusk/web.lpu23x/wiki"> lpu23x Wiki page </a>
+<br>
+<a href="https://github.com/elpusk/public.lpu237.firmware"> lpu23x firmware page </a>
+<br>
+<a href="https://github.com/elpusk/public.lpu237.software"> lpu23x software page </a>
+<br>
+    
 </body>
 </html>
