--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <img src="./img/lpu237/c/magtek/c.e.a_top.JPG" alt="magtek c type top">
                 <img src="./img/lpu237/c/magtek/c.e.a_bot.JPG" alt="magtek c type top">
             </td>
-            <td>LPU1343</td>
+            <td>LPC1343</td>
             <td>일반 케이블</td>
             <td>무</td>
             <td>일반커넥터</td>
@@ -111,7 +111,7 @@
                 <img src="./img/lpu237/c/mag_wiz/c.g.a_top.JPG" alt="magtek & wiznova c type top">
                 <img src="./img/lpu237/c/mag_wiz/c.g.a_bot.JPG" alt="magtek & wiznova c type top">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>일반 케이블</td>
             <td>무</td>
             <td>일반커넥터</td>
@@ -137,7 +137,7 @@
                 <img src="./img/lpu237/d/magtek/d.f.a_top.JPG" alt="magtek d type top">
                 <img src="./img/lpu237/d/magtek/d.f.a_bot.JPG" alt="magtek d type top">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>일반 케이블</td>
             <td>5v</td>
             <td>일반커넥터</td>
@@ -151,7 +151,7 @@
                 <img src="./img/lpu237/d/mag_wiz/d.g.a_top.JPG" alt="magtek & wiznova d type top">
                 <img src="./img/lpu237/d/mag_wiz/d.g.a_bot.JPG" alt="magtek & wiznova d type top">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>일반 케이블</td>
             <td>5v</td>
             <td>일반커넥터</td>
@@ -177,7 +177,7 @@
                 <img src="./img/lpu237/e/magtek/e.f.a_top.JPG" alt="magtek e type top">
                 <img src="./img/lpu237/e/magtek/e.f.a_bot.JPG" alt="magtek e type top">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>일반 케이블</td>
             <td>5v</td>
             <td>일반커넥터</td>
@@ -191,7 +191,7 @@
                 <img src="./img/lpu237/e/mag_wiz/e.g.a_top.JPG" alt="magtek & wiznova e type top">
                 <img src="./img/lpu237/e/mag_wiz/e.g.a_bot.JPG" alt="magtek & wiznova e type top">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>일반 케이블</td>
             <td>5v</td>
             <td>일반커넥터</td>
@@ -217,7 +217,7 @@
                 <img src="./img/lpu237/f00n/f00n.d.a_top.JPG" alt="usb & uart i-button">
                 <img src="./img/lpu237/f00n/f00n.d.a_bot.JPG" alt="usb & uart i-button">
             </td>
-            <td>LPU1343</td>
+            <td>LPC1343</td>
             <td>무</td>
             <td>5v</td>
             <td>일반커넥터</td>
@@ -243,7 +243,7 @@
                 <img src="./img/lpu237/f00nu/f00nu.b.a_top.JPG" alt="usb i-button">
                 <img src="./img/lpu237/f00nu/f00nu.b.a_bot.JPG" alt="usb i-button">
             </td>
-            <td>LPU1343</td>
+            <td>LPC1343</td>
             <td>무</td>
             <td>무</td>
             <td>일반커넥터</td>
@@ -267,7 +267,7 @@
             <td>magtek</td>
             <td>
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>직접납땜</td>
             <td>무</td>
             <td>일반커넥터</td>
@@ -280,7 +280,7 @@
             <td>
                 <img src="./img/lpu237/m001-d/m001.d_top.jpg">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>직접납땜</td>
             <td>무</td>
             <td>일반커넥터</td>
@@ -305,7 +305,7 @@
             <td>
                 <img src="./img/lpu237/m001-e-fpc/m001.e.fpc_top.jpg">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>직접납땜</td>
             <td>무</td>
             <td>FPC커넥터</td>
@@ -331,7 +331,7 @@
                 <img src="./img/lpu237/m003-b/m003.b.top.jpg">
                 <img src="./img/lpu237/m003-b/m003.b.bot.jpg">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>FPC1 케이블</td>
             <td>5v</td>
             <td>포고핀</td>
@@ -345,7 +345,7 @@
                 <img src="./img/lpu237/m003-d/m003.d_top.jpg">
                 <img src="./img/lpu237/m003-d/m003.d_bot.jpg">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>FPC1 케이블</td>
             <td>5v</td>
             <td>포고핀</td>
@@ -359,7 +359,7 @@
                 <img src="./img/lpu237/m004-a/m004.a_top.jpg">
                 <img src="./img/lpu237/m004-a/m004.a_bot.jpg">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>FPC1 케이블</td>
             <td>RS232</td>
             <td>포고핀</td>
@@ -385,7 +385,7 @@
                 <img src="./img/lpu237/m005/m005_top.jpg">
                 <img src="./img/lpu237/m005/m005_bot.jpg">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>FPC2 케이블</td>
             <td>RS232</td>
             <td>핀헤더</td>
@@ -411,7 +411,7 @@
                 <img src="./img/lpu237/m006/m006_top.jpg">
                 <img src="./img/lpu237/m006/m006_bot.jpg">
             </td>
-            <td></td>
+            <td>LPC1343</td>
             <td>FPC2 케이블</td>
             <td>RS232</td>
             <td>핀헤더</td>
