--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     <a href="https://github.com/elpusk/public.lpu237.software"> lpu23x
         software page </a>
     <br>
+    <a href="./code/js/GenBit/test.html"> Detect a ASCII card data from mmd1100 encoder output</a>
+    <br>
     <br>
     <table id="dataTable">
         <thead  id="dataHead">
