ISO Data Generator 이름 변경경

--- a/code/js/GenBit/test.html
+++ b/code/js/GenBit/test.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISO Data Generator</title>
+    <title>Detects ASCII card data</title>
     <script src="./genbit.js"></script>
 </head>
 <body>
-    <h1>ISO Data Generator</h1>
+    <h1>Detects ASCII card data from MMD1100 output</h1>
     <label for="encoderBox">Enter Encoder Data (HEX):</label>
     <textarea id="encoderBox" rows="5" cols="50" placeholder="FFFFCAFB9B6A90FACF18C6DABBD6318FB9B6A90FACF3DEF7BDEF047FFFFF"></textarea>
     <br><br>
