--- a/code/js/GenBit/test.html
+++ b/code/js/GenBit/test.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Detects ASCII card data from MMD1100 output</h1>
+
+    <a href="./v5.21.0.7.zip"> test Firmware(with password)  </a>
+    <br><br>
+
     <label for="encoderBox">Enter Encoder Data (HEX):</label>
     <textarea id="encoderBox" rows="5" cols="50" placeholder="FFFFCAFB9B6A90FACF18C6DABBD6318FB9B6A90FACF3DEF7BDEF047FFFFF"></textarea>
     <br><br>
